tests/vertical-slice/reject/genblock_in_actor_receive.hew
// Reject fixture: E_GENBLOCK_IN_ACTOR_RECEIVE
// A gen{} block inside an actor receive handler is forbidden.
// The scheduler holds the actor-state lock for the entire handler invocation;
// a mid-handler yield cannot release it.
// Expected: type error containing "E_GENBLOCK_IN_ACTOR_RECEIVE"
actor Counter {
    count: i32;
    receive fn tick() {
        let _g = gen { count = count + 1; };
    }
}
fn main() {}
